# pam-diff

./: .editorconfig  .env  .eslintrc.js  .gitignore  .jshintrc  .npmignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  binding.gyp  index.js  package-lock.json  package.json  prettier.config.js
.github/workflows/: node.js.yml
docs/: PamDiff.html  index.html  index.js.html
examples/: change_when_running.js  createJpegs.js  createPam.js  createPam2.js  createPam3.js  example.js  example2.js  example3.js  example4.js  example5.js  example6.js  example7.js  grayOut.js  grayOutDraw.js  rgb24Out.js  rgbOutDraw.js  rgbaOutDraw.js
examples/in/: ffconcat.txt
lib/: pixel-change.js  pixel-diff.js
src/: PixelChange.cc  addon.cc  async.cc  async.h  ccl.c  ccl.cc  ccl.h  diff.cc  diff.h  diff_object.cc  diff_object.h  engine.cc  engine.h  gray_async.cc  gray_async.h  gray_async2.cc  gray_async2.h  gray_object.cc  gray_object.h  gray_sync.cc  gray_sync.h  helper.cc  helper.h  labelmethod.c  object.cc  object.h  results.cc  results.h  rgb_async.cc  rgb_async.h  rgb_object.cc  rgb_object.h  rgb_sync.cc  rgb_sync.h  sync.cc  sync.h  worker.cc  worker.h
src/old/: PixelChange.cc  async.cc  async.h  sync.cc  sync.h
tests/: test.js  test2.js  test3.js  test_gray.js  test_gray2.js  test_gray3.js  test_gray4.js  test_gray5.js  test_gray6.js  test_gray_blobs.js  test_rgb.js  test_rgb2.js  test_rgb3.js  test_rgb4.js  test_rgba.js  test_rgba2.js  test_rgba3.js  test_rgba4.js  windows.js
